--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   assets:
     - 'assets/image/imagenfondo.png'
     - 'assets/image/imagen.png'
+    - 'assets/image/fondo1.png'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -68,14 +69,30 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
   fonts:
-    - family: DancingScript-VariableFont_wght
+    - family: Mogra
+      fonts:
+        - asset: fonts/Mogra-Regular.ttf
+    - family: DancingScript
       fonts:
         - asset: fonts/DancingScript-VariableFont_wght.ttf
-    - family: KdamThmorPro-Regular
+    - family: KdamThmorPro
       fonts:
         - asset: fonts/KdamThmorPro-Regular.ttf
-          weight: 700
-  
+    - family: BarlowSemiCondensed
+      fonts:
+        - asset: fonts/BarlowSemiCondensed-Black.ttf
+
+  # fonts:
+  #   - family: Mogra
+  #     fonts:
+  #       - asset: fonts/Mogra-Regular.ttf
+  #       - asset: fonts/Mogra-Regular.ttf
+  #         style: italic
+  #   - family: IBMPlexSans
+  #     fonts:
+  #       - asset: fonts/IBMPlexSans-Bold.ttf
+  #         weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
